fixed occupied spaces functionality, moved read file method to library

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /ParkingApi/bin/Debug/netcoreapp2.0
+/ParkingApi/obj
